##=============================================================================
##
## mister: lib/Makefile.am
##
##=============================================================================

lib_LTLIBRARIES= mister.la

mister_la_CFLAGS= -I@top_builddir@/include

mister_la_LDFLAGS= -avoid-version -module -shared

mister_la_SOURCES= mister.c pack.c
